adding bitbucket link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
                 <li class="list-inline-item"><a href="https://github.com/bmbtnkr" span style="color:#f5cdf2">Github</a></li>
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
+                <li class="list-inline-item"><a href="https://bitbucket.org/tombanker/" span style="color:#f5cdf2">Bitbucket</a></li>
+                <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
                 <li class="list-inline-item"><a href="http://linkedin.com/in/tombanker" span style="color:#1bb2cd">LinkedIn</a></li>
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
                 <li class="list-inline-item"><a href="mailto:tombanker@gmail.com" span style="color:#ffe66d">Gmail</a></li>
