clearer text/bg

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <body>
         <div class="d-flex flex-column flex-md-row align-items-center p-4 px-md-5 mb-4">
-            <h5 class="my-0 mx-0 mr-md-auto font-weight-normal">Tom Banker • Technical Director</h5>
+            <h5 class="my-0 mx-0 mr-md-auto font-weight-bold">Tom Banker • Technical Director</h5>
             <nav class="my-2 my-md-0 mr-md-0 align-left">
                 <a class="p-2 text-light" href="https://vimeo.com/260191834">Demo Reel</a>
                 <a class="p-0 text-light" href="http://www.tombanker.com/resume.pdf">CV / Resume</a>
