--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="main-header px-5 py-5 mx-auto text-center">
-            <p class="lead"><span style="color:#ff6b6b">Hi there!</span> I'm Tom, a Technical Director from the Bay Area. I'm currently building pipelines and tools at <a href="https://www.mz.com" span style="color:#4ecdc4">Machine Zone.</a> Drop me a <a href="mailto:tombanker@gmail.com" span style="color:#ffe66d;">mail</a> if you'd like to get in touch.</p>
+            <p class="lead"><span style="color:#ff6b6b">Hi there!</span> I'm Tom, a Technical Director from the Bay Area. I'm currently building AR effects and tools at <a href="https://about.fb.com/" span style="color:#1bb2cd">Facebook.</a> Drop me a <a href="mailto:tombanker@gmail.com" span style="color:#ffe66d;">mail</a> if you'd like to get in touch!</p>
         </div>
         
         <div class="container px-0 py-0 mx-auto text-center">
