--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
                 <li class="list-inline-item"><a href="http://www.tombanker.com/resume.pdf" span style="color:#8855d6">CV/Resume</a></li>
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
-                <li class="list-inline-item"><a href="https://github.com/bmbtnkr" span style="color:#f5cdf2">Github</a></li>
+                <li class="list-inline-item"><a href="https://github.com/tombanker" span style="color:#f5cdf2">Github</a></li>
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
                 <li class="list-inline-item"><a href="https://bitbucket.org/tombanker/" span style="color:#f5cdf2">Bitbucket</a></li>
                 <li class="list-inline-item"><a span style="font-weight: bold">•</a></li>
